--- a/templates/clock-keeper-sheet.hbs
+++ b/templates/clock-keeper-sheet.hbs
@@ -16,46 +16,64 @@
 		<div class="keys-container">
 			<table>
 				<thead>
+					<th class="black-white">State</th>
+					<th class="black-white">Name</th>
+					<th class="black-white">Size</th>
 					<th class="black-white">
-						<label class="check-label">Show</label>
-						<label class="check-label">Focus</label>
+						{{> "systems/eunos-blades/templates/parts/button-icon.hbs"
+							blockClass="tooltip-left"
+							buttonClass="fas fa-plus-square"
+							tooltip="<b>Add Key</b>"
+							action="add-key"
+						}}
 					</th>
-					<th class="black-white">
-						<label class="check-label">Show<br/>Name</label>
-						Display Name
-					</th>
-					<th class="black-white">Clocks</th>
-					<th class="black-white"><a class="key-add"><i class="fas fa-plus-square"></i></a></th>
 				</thead>
 				<tbody>
 					{{#each data.clock_keys as |keyData keyID|}}
 					<tr>
 							<th class="black-white">
-								<input type="checkbox" class="key-checkbox" name="data.clock_keys.{{keyID}}.isVisible" {{checked keyData.isVisible}}>
-								{{#if keyData.isVisible}}
-								<input type="checkbox" class="key-checkbox" name="data.clock_keys.{{keyID}}.isActive" {{checked keyData.isActive}}>
-								{{/if}}
+								{{> "systems/eunos-blades/templates/parts/toggle-icon.hbs"
+									isToggled=keyData.isVisible
+									activeClass="fas fa-eye"
+									activeTooltip="<b>Key is Visible</b><br>Click to Hide"
+									inactiveClass="fas fa-eye-slash"
+									inactiveTooltip="<b>Key is Hidden</b><br>Click to Show"
+									targetKey=(concat "data.clock_keys." keyID ".isVisible") }}
+								{{> "systems/eunos-blades/templates/parts/toggle-icon.hbs"
+									isToggled=keyData.isActive
+									activeClass="fas fa-bell"
+									activeTooltip="<b>Key is Focused</b><br>Click to Mute"
+									inactiveClass="fas fa-bell-slash"
+									inactiveTooltip="<b>Key is Muted</b><br>Click to Focus"
+									targetKey=(concat "data.clock_keys." keyID ".isActive") }}
 							</th>
 							<th class="black-white">
-								{{#if keyData.isVisible}}
-								<input type="checkbox" class="key-checkbox" name="data.clock_keys.{{keyID}}.isNameVisible" {{checked keyData.isNameVisible}}>
-								{{/if}}
+								{{> "systems/eunos-blades/templates/parts/toggle-icon.hbs"
+									isToggled=keyData.isNameVisible
+									activeClass="fas fa-comment"
+									activeTooltip="<b>Name is Visible</b><br>Click to Hide"
+									inactiveClass="fas fa-comment-slash"
+									inactiveTooltip="<b>Name is Hidden</b><br>Click to Show"
+									targetKey=(concat "data.clock_keys." keyID ".isNameVisible") }}
 								<input type="text" class="key-input key-input-display" name="data.clock_keys.{{keyID}}.display" value="{{keyData.display}}">
 							</th>
 							<th class="black-white">
 								<select class="key-clock-counter" data-type="number" data-id="{{keyID}}" name="data.clock_keys.{{keyID}}.numClocks">
 									{{#select keyData.numClocks}}
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-									<option value="4">4</option>
-									<option value="5">5</option>
-									<option value="6">6</option>
+									{{#times_from_1 6}}
+									<option value="{{this}}">{{this}}</option>
+									{{/times_from_1}}
 									{{/select}}
 								</select>
 							</th>
 							<th class="black-white">
-								<p><a class="key-delete" title="Delete Key" data-id="{{keyID}}"><i class="fas fa-trash"></i></a></p>
+								{{> "systems/eunos-blades/templates/parts/button-icon.hbs"
+									blockClass="tooltip-left"
+									buttonClass="fas fa-trash"
+									tooltip="<b>Delete Key</b>"
+									action="delete-key"
+									targetId=keyID
+								}}
 							</th>
 						</tr>
 						{{#times_from_1 keyData.numClocks}}
